// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/publish-post/facebook PublishPost when publishing post including image should succeed 1`] = `
Ok {
  "value": Object {
    "postId": "110658944785122_112627324588284",
  },
}
`;

exports[`social-media/publish-post/facebook PublishPost when publishing post including image should succeed 2`] = `
Ok {
  "value": Object {
    "postId": "270469765102307_270536345095649",
  },
}
`;

exports[`social-media/publish-post/facebook PublishPost when publishing text message should succeed 1`] = `
Ok {
  "value": Object {
    "postId": "110658944785122_112627654588251",
  },
}
`;

exports[`social-media/publish-post/facebook PublishPost when publishing text message should succeed 2`] = `
Ok {
  "value": Object {
    "postId": "270469765102307_270536365095647",
  },
}
`;
